# cylc-rose

./: .codecov.yml  .coveragerc  .gitignore  .mailmap  .rose-config_processors-file.db  CHANGES.md  CONTRIBUTING.md  DEVELOPING.md  MANIFEST.IN  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: 1_create_release_pr.yml  2_auto_publish_release.yml  branch_sync.yml  build.yml  shortlog.yml  tests.yaml  tests.yml  update_copyright.yml
changes.d/: 386.fix.md  398.fix.md
cylc/rose/: __init__.py  entry_points.py  exceptions.py  fileinstall.py  jinja2_parser.py  platform_utils.py  rose.py  stem.py  utilities.py
tests/: conftest.py  test_config_node.py  test_config_tree.py  test_functional_post_install.py  test_generic_utils.py  test_platform_utils.py  test_rose.py  test_rose_opts.py  test_rose_stem_units.py
tests/functional/: test_ROSE_ORIG_HOST.py  test_copy_config_file.py  test_play.py  test_post_install.py  test_pre_configure.py  test_reinstall.py  test_reinstall_clean.py  test_reinstall_fileinstall.py  test_reinstall_overrides.py  test_reload.py  test_rose_fileinstall.py  test_rose_stem.py  test_utils.py  test_validate_no_rose_ignore_items.py
tests/functional/02_env/: flow.cylc
tests/functional/05_opts_set_from_rose_suite_conf/opt/: rose-suite-Gaelige.conf
tests/functional/06_jinja2_thorough/: flow.cylc  processed.conf.control  rose-suite.conf
tests/functional/09_template_vars_vanilla/: flow.cylc  processed.conf.control  rose-suite.conf
tests/functional/10_reinstall_basic/: flow.cylc  rose-suite.conf
tests/functional/11_reinstall_clean/: rose-suite.conf
tests/functional/13_ROSE_ORIG_HOST/: flow.cylc
tests/functional/13_cylc_play/: flow.cylc  rose-suite.conf  suite.rc
tests/functional/14_reinstall_fileinstall/: data  flow.cylc  rose-suite.conf
tests/functional/14_reinstall_fileinstall/dev-8.x/: flow.cylc
tests/functional/15_reinstall_using_old_clivars/: flow.cylc
tests/functional/15_reinstall_using_old_clivars/opt/: rose-suite-choc.conf
tests/unit/: test_cli.py  test_config_node.py  test_config_tree.py  test_fileinstall.py  test_functional_post_install.py  test_generic_utils.py  test_platform_utils.py  test_rose_opts.py  test_rose_stem_units.py
