# THIS FILE IS PART OF THE ROSE-CYLC PLUGIN FOR THE CYLC SUITE ENGINE.
# Copyright (C) NIWA & British Crown (Met Office) & Contributors.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cylc-rose
author = British Crown (Met Office) & Contributors
author_email = metomi@metoffice.gov.uk
url=https://cylc.github.io/cylc-doc/latest/html/plugins/cylc-rose.html
description = A Cylc plugin providing support for the Rose rose-suite.conf file.
keywords =
    cylc
    rose
    workflow
    configuration
    workflow-engine
    workflow-automation
    workflow-management
license = GPL
license_file = COPYING
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7

[options.entry_points]
cylc.pre_configure =
    rose = cylc.rose.entry_points:pre_configure
cylc.post_install =
    rose_opts = cylc.rose.entry_points:post_install
console_scripts =
    rose-stem = cylc.rose.stem:main
