# THIS FILE IS PART OF THE ROSE-CYLC PLUGIN FOR THE CYLC WORKFLOW ENGINE.
# Copyright (C) NIWA & British Crown (Met Office) & Contributors.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cylc-rose
version = attr: cylc.rose.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = British Crown (Met Office) & Contributors
author_email = metomi@metoffice.gov.uk
url=https://cylc.github.io/cylc-doc/latest/html/plugins/cylc-rose.html
description = A Cylc plugin providing support for the Rose rose-suite.conf file.
keywords =
    cylc
    rose
    workflow
    configuration
    workflow-engine
    workflow-automation
    workflow-management
license = GPL
license_file = COPYING
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    metomi-rose==2.0rc3.*  # the .* permits dev versions
    cylc-flow==8.0rc3.*  # the .* permits dev versions
    metomi-isodatetime
    jinja2

[options.packages.find]
include = cylc*

[options.extras_require]
tests =
    coverage>=5.0.0
    flake8
    flake8-broken-line>=0.3.0
    flake8-bugbear>=21.0.0
    flake8-builtins>=1.5.0
    flake8-comprehensions>=3.5.0
    flake8-debugger>=4.0.0
    flake8-mutable>=1.2.0
    flake8-simplify>=0.15.1
    mypy>=0.910
    pytest
    pytest-cov
    pytest-xdist>=2
all =
    %(tests)s

[options.entry_points]
cylc.pre_configure =
    rose = cylc.rose.entry_points:pre_configure
cylc.post_install =
    rose_opts = cylc.rose.entry_points:post_install
rose.commands =
    stem = cylc.rose.stem:main
